--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,5 +1,12 @@
 server:
+  tomcat:
+    uri-encoding: UTF-8
+    max-threads: 1000
+    min-spare-threads: 30
   port: 8002
+  connection-timeout: 5000ms
+  servlet:
+    context-path: /mng
 spring:
   #数据源配置
   datasource:
@@ -15,6 +22,23 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
+  #Redis
+  redis:
+    database: 0
+    host: localhost
+    port: 6379
+    password:
+    timeout: 6000ms #连接超时时长
+    jedis:
+      pool:
+        max-active: 1000 # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 10 # 连接池中的最大空闲连接
+        min-idle: 5 # 连接池中的最小空闲连接
+  mvc:
+    throw-exception-if-no-handler-found: true #出现异常全部去到统一异常配置中
+  resources:
+    add-mappings: false #不需要帮我们自动映射
 mybatis-plus:
   #扫描resources下的xml文件
     mapper-locations: classpath:mapper/**/*.xml
